Fix layout issues with spinner

--- a/src/main/ui/ui/src/styles/App.css
+++ b/src/main/ui/ui/src/styles/App.css
@@ -436,7 +436,7 @@ body {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-
+  height: auto !important;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
